--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <img id="banner" src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-topo">
+   <ul>
+    <li>home</li>
+    <li>serviços</li>
+    <li>produtos</li>
+    <li>contato</li>
+   </ul>
     <h1>sobre a barbearia alura</h1>
     
     <div class="textos">
