--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Barbearia Alura</title>
 </head>
 <body>
-   <img class="logo" src="https://1nem.vercel.app/img/logo_bco.png" alt="">
+   <header>
+    <div class="pai">
+        <img class="logo" src="https://1nem.vercel.app/img/logo_bco.png" alt="">
    <nav>
     <ul>
         <li><a href="#">home</a></li>
@@ -16,6 +18,8 @@
         <li><a href="#">contato</a></li>
        </ul>
    </nav>
+    </div>
+   </header>
    <img id="banner" src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-topo">
    
     <h1>sobre a barbearia alura</h1>
