--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img class="logo" src="https://1nem.vercel.app/img/logo_bco.png" alt="">
    <nav>
     <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">serviços</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="https://www.uol.com.br/">serviços</a></li>
         <li><a href="#">produtos</a></li>
-        <li><a href="#">contato</a></li>
+        <li><a href="contato.html">contato</a></li>
        </ul>
    </nav>
     </div>
