--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <h2>serviços</h2>
 <section class="servicos">
-<div class="item-servicos">barba</div>
+<div class="item-servicos" id="item1">barba</div>
 <div class="item-servicos">cabelo</div>
 <div class="item-servicos">perucas</div>
 </section>
